# ridge

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  azure-pipelines.yml  clippy.toml  rustfmt.toml
crates/ridge-ast/: Cargo.toml
crates/ridge-ast/src/: base.rs  block.rs  column_mirror.rs  decl.rs  expr.rs  ident.rs  lib.rs  lit.rs  module.rs  pattern.rs  ty.rs  typeclass.rs  visit.rs
crates/ridge-bench/: Cargo.toml
crates/ridge-bench/benches/: incremental.rs  pipeline.rs
crates/ridge-bench/src/: lib.rs  tracking.rs
crates/ridge-bench/tests/: incremental_perf.rs  layer_b.rs
crates/ridge-cli/: Cargo.toml
crates/ridge-cli/src/: error.rs  lib.rs  main.rs  render.rs  scaffold.rs
crates/ridge-cli/templates/: Main.ridge.tpl  README.md.tpl  ridge.toml.tpl
crates/ridge-cli/tests/: build.rs  check.rs  dod.rs  fmt.rs  init.rs  migrate.rs  migrate_pg_e2e.rs  new.rs  parse_error_render.rs  repl.rs  run.rs  test_cmd.rs
crates/ridge-codegen-erl/: Cargo.toml  build.rs
crates/ridge-codegen-erl/runtime/: ridge_bench_runner.erl  ridge_main_runner.erl  ridge_pg.erl  ridge_rt.erl  ridge_sqlite.erl  ridge_sup.erl  ridge_test_runner.erl
crates/ridge-codegen-erl/src/: actor.rs  anf.rs  core_ast.rs  erlc.rs  error.rs  escript.rs  expr.rs  handler.rs  init.rs  item.rs  letrec_detect.rs  lib.rs  lit.rs  messaging.rs  module.rs  output_layout.rs  pat.rs  printer.rs  return_.rs  runtime.rs  scope.rs  stdlib_map.rs  symbol.rs  with_update.rs
crates/ridge-codegen-erl/tests/: beam_e2e.rs  cap_erasure.rs  core_ast_snapshot.rs  core_text_snapshot.rs  debug_ratelimiter.rs  debug_store.rs  debug_worker_ir.rs  erlc_probe.rs  escript_test.rs  http_security_headers.rs  pg_where_compile_e2e.rs  shadow_param_fn.rs  sqlite_nif_smoke.rs  stdlib_map.rs  supervision.rs
crates/ridge-codegen-llvm/: Cargo.toml
crates/ridge-codegen-llvm/src/: lib.rs
crates/ridge-codegen-wasm/: Cargo.toml
crates/ridge-codegen-wasm/src/: lib.rs
crates/ridge-diagnostics/: Cargo.toml
crates/ridge-diagnostics/src/: diagnostic.rs  lib.rs  render.rs
crates/ridge-driver/: Cargo.toml
crates/ridge-driver/src/: check.rs  compile.rs  diag_adapters.rs  error.rs  incremental.rs  lib.rs  options.rs  run.rs  sources.rs
crates/ridge-driver/tests/: aggregate_numeric_bound_e2e.rs  bytes_e2e.rs  column_codegen_e2e.rs  computed_column_e2e.rs  cross_module_derived_codec_e2e.rs  crypto_bridge_e2e.rs  data_adapter_e2e.rs  data_array_e2e.rs  data_bytes_e2e.rs  data_date_e2e.rs  data_decimal_agg_e2e.rs  data_decimal_e2e.rs  data_interval_e2e.rs  data_json_e2e.rs  data_migrate_e2e.rs  data_migrate_source_e2e.rs  data_pg_array_e2e.rs  data_pg_bytes_e2e.rs  data_pg_date_e2e.rs  data_pg_decimal_e2e.rs  data_pg_e2e.rs  data_pg_interval_e2e.rs  data_pg_json_e2e.rs  data_pg_time_e2e.rs  data_pg_timestamp_e2e.rs  data_pg_uuid_e2e.rs  data_query_e2e.rs  data_raw_e2e.rs  data_repo_e2e.rs  data_sqlite_e2e.rs  data_time_e2e.rs  data_timestamp_e2e.rs  data_tx_e2e.rs  data_uuid_e2e.rs  data_write_e2e.rs  db_error_e2e.rs  decimal_e2e.rs  decimal_match_pattern_e2e.rs  decode_deriving_e2e.rs  deriving_row_e2e.rs  (+62 more)
crates/ridge-fmt/: Cargo.toml  README.md
crates/ridge-fmt/src/: lib.rs  printer.rs  rules.rs  trivia.rs
crates/ridge-fmt/tests/: fmt_tests.rs
crates/ridge-ir/: Cargo.toml
crates/ridge-ir/src/: actor.rs  expr.rs  id.rs  item.rs  lib.rs  lit.rs  pat.rs  symbol.rs  workspace.rs
crates/ridge-lexer/: Cargo.toml
crates/ridge-lexer/src/: doc_comment.rs  error.rs  interpolation.rs  layout.rs  lib.rs  numbers.rs  raw_scan.rs  span.rs  strings.rs  token.rs
crates/ridge-lexer/tests/: errors.rs  snapshots.rs  string_lits.rs
crates/ridge-lower/: Cargo.toml
crates/ridge-lower/src/: actor_lower.rs  ast_type.rs  block.rs  core.rs  ctx.rs  error.rs  field_accessor.rs  guard.rs  if_lower.rs  inner_fn.rs  interp.rs  item.rs  lib.rs  match_lower.rs  operators.rs  pipe.rs  prelude_dict.rs  propagate.rs  try_block.rs  with_update.rs
crates/ridge-lower/tests/: lowering.rs  neutrality.rs  snapshots.rs  to_text_user_types.rs
crates/ridge-lsp/: Cargo.toml  README.md
crates/ridge-lsp/src/: cancel.rs  completion.rs  diagnostics.rs  format.rs  index.rs  lib.rs  main.rs  server.rs  span_recovery.rs  stdlib_defs.rs
crates/ridge-lsp/tests/: hover_types.rs  lsp_replay.rs  nesting_hints.rs  stdio_smoke.rs
crates/ridge-manifest/: Cargo.toml
crates/ridge-manifest/src/: error.rs  find.rs  globs.rs  lib.rs  project.rs  workspace.rs
crates/ridge-manifest/tests/: error_test.rs  parity_test.rs  project_test.rs  workspace_test.rs
crates/ridge-parser/: Cargo.toml
crates/ridge-parser/src/: actor_ops.rs  block.rs  ctrl.rs  cursor.rs  decl.rs  error.rs  expr.rs  lib.rs  pattern.rs  ty.rs
crates/ridge-parser/tests/: errors.rs  fuzz.rs  grammar_conformance.rs  layout_continuation.rs  snapshots.rs  syntax_guidance.rs  visit.rs
crates/ridge-pkg/: Cargo.toml
crates/ridge-pkg/src/: cache.rs  error.rs  git.rs  lib.rs  path.rs  resolver.rs
crates/ridge-pkg/tests/: cache_test.rs  git_test.rs  path_test.rs  version_dep_test.rs
crates/ridge-resolve/: Cargo.toml  build.rs
crates/ridge-resolve/src/: capabilities.rs  decl.rs  discovery.rs  error.rs  forbid.rs  globs.rs  imports.rs  lib.rs  manifest.rs  module_graph.rs  node_id.rs  qualified.rs  scope.rs  stdlib_builtin.rs  suggest.rs  symbol.rs  visibility.rs  walker.rs
crates/ridge-resolve/tests/: errors.rs  snapshots.rs  workspace.rs
crates/ridge-stdlib/: Cargo.toml  build.rs
crates/ridge-stdlib/src/: build_driver.rs  codegen_ffi_targets.rs  codegen_manifest.rs  ffi_caps_audit.rs  ffi_targets.rs  ffi_validator.rs  lib.rs
crates/ridge-stdlib/stdlib/: actor.ridge  actor.test.ridge  bool.rg  bool.test.rg  bool.test.ridge  bytes.ridge  cli.ridge  cli.test.rg  cli.test.ridge  codec.ridge  crypto.ridge  data.ridge  date.ridge  decimal.ridge  env.rg  env.test.rg  env.test.ridge  float.rg  float.ridge  float.test.rg  float.test.ridge  (+59 more)
crates/ridge-typecheck/: Cargo.toml  build.rs
crates/ridge-types/: Cargo.toml
(+525 files in other folders)
