[package]
name         = "ridge-ast"
description  = "Shared AST types"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-lexer = { path = "../ridge-lexer" }

[lints]
workspace = true
