[package]
name         = "ridge-bench"
description  = "Compile-pipeline benchmarks for the Ridge toolchain"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "ridge_bench"
path = "src/lib.rs"

[dependencies]
ridge-driver = { path = "../ridge-driver" }
tempfile     = "3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name    = "pipeline"
harness = false

[lints]
workspace = true
