[package]
name         = "ridge-bench"
description  = "Compile-pipeline benchmarks for the Ridge toolchain"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "ridge_bench"
path = "src/lib.rs"

[dependencies]
ridge-driver = { path = "../ridge-driver" }
tempfile     = "3"

[dev-dependencies]
criterion        = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
ridge-codegen-erl = { path = "../ridge-codegen-erl" }
which            = "8"

[features]
# Layer B tests compile Ridge to BEAM and run them; they need a real OTP.
beam-runtime = []

[[bench]]
name    = "pipeline"
harness = false

[lints]
workspace = true
