[package]
name         = "ridge-cli"
description  = "Ridge CLI entry point"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "ridge_cli"
path = "src/lib.rs"

[[bin]]
name = "ridge"
path = "src/main.rs"

[dependencies]
clap            = { version = "4", features = ["derive"] }
ridge-driver    = { path = "../ridge-driver" }
ridge-codegen-erl = { path = "../ridge-codegen-erl" }
ridge-fmt       = { path = "../ridge-fmt" }
ridge-manifest  = { path = "../ridge-manifest" }
ridge-resolve   = { path = "../ridge-resolve" }
ridge-diagnostics = { path = "../ridge-diagnostics" }
notify          = { version = "8", optional = true }
which           = "8"
dirs            = "6"
tempfile        = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"

[features]
## Gate for tests/features that require a real OTP installation.
## Run with `cargo test -p ridge-cli --features beam-runtime`.
beam-runtime = []

## Gate for the --watch subcommand (depends on `notify` file-watcher).
## Run with `cargo build -p ridge-cli --features cli-watch`.
cli-watch = ["dep:notify"]

[lints]
workspace = true
