[package]
name         = "ridge-cli"
description  = "Ridge CLI entry point"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
name = "ridge_cli"
path = "src/lib.rs"

[[bin]]
name = "ridge"
path = "src/main.rs"

[dependencies]
clap            = { version = "4", features = ["derive"] }
ridge-driver    = { path = "../ridge-driver" }
ridge-codegen-erl = { path = "../ridge-codegen-erl" }
ridge-fmt       = { path = "../ridge-fmt" }
ridge-manifest  = { path = "../ridge-manifest" }
ridge-resolve   = { path = "../ridge-resolve" }
ridge-diagnostics = { path = "../ridge-diagnostics" }
notify          = { version = "8", optional = true }
which           = "8"
dirs            = "6"
tempfile        = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd  = "2"
predicates  = "3"

[features]
## Bakes the SQLite native bridge into the `ridge` binary and gates the tests
## that need a real OTP. Propagates to ridge-codegen-erl, whose build script
## compiles the NIF and embeds it, so a released `ridge` carries the bridge with
## no C toolchain on the user's machine. The release workflow builds with this
## feature; a plain build leaves it off and needs neither OTP nor a C compiler.
## Run tests with `cargo test -p ridge-cli --features beam-runtime`.
beam-runtime = ["ridge-codegen-erl/beam-runtime"]

## Gate for the --watch subcommand (depends on `notify` file-watcher).
## Run with `cargo build -p ridge-cli --features cli-watch`.
cli-watch = ["dep:notify"]

[lints]
workspace = true
