[package]
name         = "ridge-codegen-wasm"
description  = "Codegen: IR to WebAssembly (0.3.0+)"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lints]
workspace = true
