[package]
name         = "ridge-diagnostics"
description  = "Diagnostic rendering"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-ast     = { path = "../ridge-ast" }
ridge-resolve = { path = "../ridge-resolve" }
ridge-lexer   = { path = "../ridge-lexer" }
ridge-parser  = { path = "../ridge-parser" }
ariadne       = { workspace = true }
is-terminal   = { workspace = true }
yansi         = { workspace = true }
thiserror     = { workspace = true }

[lints]
workspace = true
