[package]
name         = "ridge-driver"
description  = "Compilation orchestration"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-ast         = { path = "../ridge-ast" }
ridge-lexer       = { path = "../ridge-lexer" }
ridge-parser      = { path = "../ridge-parser" }
ridge-resolve     = { path = "../ridge-resolve" }
ridge-typecheck   = { path = "../ridge-typecheck" }
ridge-lower       = { path = "../ridge-lower" }
ridge-codegen-erl = { path = "../ridge-codegen-erl" }
ridge-stdlib      = { path = "../ridge-stdlib" }
ridge-diagnostics = { path = "../ridge-diagnostics" }
ridge-manifest    = { path = "../ridge-manifest" }
ridge-pkg         = { path = "../ridge-pkg" }
ridge-ir          = { path = "../ridge-ir" }
rustc-hash        = { workspace = true }
thiserror         = { workspace = true }
tempfile          = "3"
which             = "8"

[features]
## Gate for integration tests that require a real OTP installation (`erl` on PATH).
## Run with `cargo test -p ridge-driver --features beam-runtime`. Propagates to
## ridge-codegen-erl so the SQLite runtime (its native bridge) is baked and
## installed for the tests that open a real SQLite connection.
beam-runtime = ["ridge-codegen-erl/beam-runtime"]

[dev-dependencies]
tempfile = "3"
which    = "8"

[lints]
workspace = true
