[package]
name        = "ridge-fmt"
description = "Source formatter for the Ridge language."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-parser = { path = "../ridge-parser" }
ridge-ast    = { path = "../ridge-ast" }
ridge-lexer  = { path = "../ridge-lexer" }
thiserror.workspace = true

[dev-dependencies]
