[package]
name         = "ridge-ir"
description  = "Ridge Core IR"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-types   = { path = "../ridge-types" }
ridge-resolve = { path = "../ridge-resolve" }
ridge-ast     = { path = "../ridge-ast" }
rustc-hash    = { workspace = true }

[lints]
workspace = true
