[package]
name         = "ridge-lower"
description  = "AST to IR lowering"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ridge-ir         = { path = "../ridge-ir" }
ridge-typecheck  = { path = "../ridge-typecheck" }
ridge-types      = { path = "../ridge-types" }
ridge-ast        = { path = "../ridge-ast" }
ridge-resolve    = { path = "../ridge-resolve" }
rustc-hash       = { workspace = true }

[dev-dependencies]
insta            = { workspace = true }
