[package]
name         = "ridge-resolve"
description  = "Name resolution, imports, workspace rules"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
publish.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[dependencies]
ridge-lexer  = { path = "../ridge-lexer" }
ridge-ast    = { path = "../ridge-ast" }
ridge-parser = { path = "../ridge-parser" }
thiserror.workspace = true
toml.workspace = true
serde.workspace = true
rustc-hash.workspace = true
globset.workspace = true

[dev-dependencies]
tempfile = "3"
insta.workspace = true

[lints]
workspace = true
